<resources>
    <string name="app_name">Hi-Depok</string>
    <string name="app_name_bold">HI-<b>DEPOK</b></string>
    <string name="app_tagline">we share we care</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="facebook_app_id">191754478218300</string>
    <string name="fontReguler" translatable="false">font/Brandon_reg.otf</string>
    <string name="fontRegulerItalic" translatable="false">font/Brandon_reg_it.otf</string>
    <string name="fontBold" translatable="false">font/Brandon_bld.otf</string>
    <string name="fontBoldItalic" translatable="false">font/Brandon_bld_it.otf</string>
    <string name="fontBlack" translatable="false">font/Brandon_blk.otf</string>
    <string name="fontBlackItalic" translatable="false">font/Brandon_blk_it.otf</string>
    <string name="fontLight" translatable="false">font/Brandon_light.otf</string>
    <string name="fontLightItalic" translatable="false">font/Brandon_light_it.otf</string>
    <string name="fontMedium" translatable="false">font/Brandon_med.otf</string>
    <string name="fontMediumItalic" translatable="false">font/Brandon_med_it.otf</string>
    <string name="fontThin" translatable="false">font/Brandon_thin.otf</string>
    <string name="fontThinItalic" translatable="false">font/Brandon_thin_it.otf</string>
    <string name="desc">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
        containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
        including versions of Lorem Ipsum.
    </string>
    <string name="forHeader">HI-<b>DEPOK</b></string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="emailJAR">fsandjujar@gmail.com</string>
    <string name="nama">JAR</string>
    <string name="isibio">IT Project Manager</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="bio">Bio</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="nmrTlp">Nomor Telepon</string>
    <string name="verify">
        Kami telah mengirimkan Anda SMS dengan kode verifikasi,
        silahkan masukkan 6 digit kode verifikasi yang dikirimkan ke nomor telepon anda</string>
    <string name="verifyNum">5867734</string>
    <string name="verifyBtn">Confirm</string>
    <string name="send">SEND</string>
    <string name="fogotPass">
        Silahkan masukkan alamat email anda untuk menerima password Anda
    </string>
    <string name="validasi">
        Dengan ini saya bersedia untuk bertanggung jawab dengan nama diatas
        dan dengan segala aktivitas yang saya lakukan pada aplikasi ini</string>
    <string name="alamat">Alamat</string>
    <string name="lupaPass"><u>Lupa Password?</u></string>
    <string name="loginwithgoogle">Google</string>
    <string name="loginwithfb">Facebook</string>
    <string name="loginwithtwit">Twitter</string>
    <string name="search">
        Temukan berita, data, dan lokasi berbagai \n  tempat di Kota Depok
        secara detail \n disini, hanya dengan satu kali <b>KLIK</b>
        untuk \n mempermudah segala urusan Anda
    </string>
    <string name="descKS">
        Jika Anda ingin berkontribusi untuk pembangunan Kota Depok atau terhadap pengembangan dari aplikasi ini, Anda dapat memberikan
        kritik dan saran pada form dibawah ini. Tim kami akan segera melakukan tindak lanjut terhadap kritik dan saran yang Anda berikan
        lewat aplikasi ini.
    </string>
    <string name="cari">CARI <b>DATA</b></string>
    <string name="diag">Diagnosa</string>
    <string name="ensiklo">Ensiklopedi</string>
    <string name="volunteer">Volunteer</string>
    <string name="usaha">Sahabat UKM</string>
    <string name="rsud">RSUD</string>
    <string name="sahabatkos">Sahabat Kos</string>
    <string name="ss">Space Room</string>
    <string name="about">About</string>
    <string name="tomboldarurat">NTPD</string>
    <string name="jointxt">Join Since</string>
    <string name="jointgl">05/08/2017</string>
    <string name="edtprofile">EDIT PROFILE</string>
    <string name="viewprofile"><u>view detail profile</u></string>
    <string name="time">2 jam lalu</string>
    <string name="like">menyukai postingan Anda</string>
    <string name="comment">menanggapi postingan Anda</string>
    <string name="uname">Uname</string>
    <string name="mail">Email</string>
    <string name="almt">Alamat</string>
    <string name="noTlp">No. Tlp</string>
    <string name="tlp">087777139373</string>
    <string name="TglLahir">Tanggal Lahir</string>
    <string name="bio2">Bio</string>
    <string name="mail2">fsandjujar@gmail.com</string>
    <string name="close">CLOSE</string>
    <string name="save">SAVE</string>
    <string name="post">KIRIMAN</string>
    <string name="tropy">STATISTIK</string>
    <string name="tropyKet">Anda belum mempunyai riwayat penghargaan</string>
    <string name="karya">KARYA</string>
    <string name="modul">MODUL</string>
    <string name="museum">MUSEUM</string>
    <string name="news1">[NEWS_TITLE]</string>
    <string name="portal1">[NEWS_PORTAL]</string>
    <string name="hot">HOT NEWS</string>
    <string name="time1">[NEWS_DATE]</string>
    <string name="news2">[NEWS_TITLE]</string>
    <string name="portal2">[NEWS_PORTAL]</string>
    <string name="time2">[NEWS_DATE]</string>
    <string name="titik">"\u2022"</string>
    <string name="namaKos">Ketik nama kos ...</string>
    <string name="menu">Mode List</string>
    <string name="submit">Submit</string>
    <string name="location">Gedung Perpustakaan, Balaikota Depok</string>
    <string name="nama1">Pandu</string>
    <string name="nama2">Toriq Aefvoel</string>
    <string name="nama3">HVS 13</string>
    <string name="likeTxt">Suka</string>
    <string name="likeTxt1">Suka</string>
    <string name="likeTxt2">Suka</string>
    <string name="likeTxt3">Suka</string>
    <string name="commentTxt">Komentar</string>
    <string name="commentTxt1">Komentar</string>
    <string name="commentTxt2">Komentar</string>
    <string name="commentTxt3">Komentar</string>
    <string name="share1">Share</string>
    <string name="share2">Share</string>
    <string name="share3">Share</string>
    <string name="postTxt">
        Robot line follower oleh tim ROBOFIGHTER dari SD Muhammadiyah Negeri 1 Depok
    </string>
    <string name="postTxt1">
        Maha seni oleh seorang anak asal Cilodong
    </string>
    <string name="postTxt2">
        ini nih baru yang namanya MASTERPIECE
    </string>
    <string name="postTxt3">
        Robot line follower dari anak sd asal Beji\n
        Robot rescue yang dibuat oleh tim ROBOFIGHTER tersebut berhasil meyingkirkan 60 tim lawan dari berbagai negara yang juga ikut serta dalam kompetisi tersebut. Robot karya anak bangsa tersebut juga mampu menjalankan berbagai perintah dan tugas yang diberikan panitia lomba, seperti berjalan sesuaio dengan line tracer atau garis lintasan yang telah ditetapkan, serta mendeteksi benda dan meletakan kembali di tempat yang telah ditentukan.
    </string>
    <string name="museum1">
        Piala Adipura
    </string>
    <string name="museum2">
        Robot Line Follower
    </string>
    <string name="museum3">
        Olahan Belimbing Terbaik se-Jawa Barat
    </string>
    <string name="tahun">25/05/2016</string>
    <string name="tahun1">15/06/2016</string>
    <string name="tahun2">18/02/2016</string>
    <string name="share">Share</string>
    <string name="judul">5 jam langsung jago coding</string>
    <string name="judul1">Kombinasi baru dari olahan Belimbing, dari komunitas UKM Depok</string>
    <string name="judul2">Mengelola Data Warehouse dengan keamanan ganda</string>
    <string name="judul3">Firebase Best Practise</string>
    <string name="pengarang">Chairul Anwar</string>
    <string name="pengarang1">Fajar Zakaria</string>
    <string name="pengarang2">Muhamad Hafizh</string>
    <string name="pengarang3">Tegar Hidayat</string>
    <string name="page">75 Halaman</string>
    <string name="page1">189 Halaman</string>
    <string name="page2">223 Halaman</string>
    <string name="viewer">10256 Viewer</string>
    <string name="viewer1">253 Viewer</string>
    <string name="viewer2">1138 Viewer</string>
    <string name="jam">14:20</string>
    <string name="jam1">Yesterday</string>
    <string name="jam2">10/05/2017</string>
    <string name="jam3">09:53</string>
    <string name="pesan">Dateng aja, saya sedang meeting</string>
    <string name="pesan2">Oke, tunggu sebentar. Saya OTW 5 menit lagi</string>
    <string name="pesan3">Ini alamatnya ya. Jl. Raya Margonda no.41, Depok</string>
    <string name="pesan4">Di gedung perpustakaan Kota Depok, lt.1 sebelah kiri, di ruang Space Room yaa!</string>
    <string name="kategori">Komputer</string>
    <string name="kategori1">Android</string>
    <string name="kategori2">Robotic</string>
    <string name="kategori3">Biologi</string>
    <string name="kategori4">Teknologi</string>
    <string name="tingkat">Nasional</string>
    <string-array name="gender">
        <item>Semua</item>
        <item>Campuran</item>
        <item>Putra</item>
        <item>Putri</item>
    </string-array>
    <string-array name="atributdss">
        <item>Harga</item>
        <item>Jarak</item>
        <item>Fasilitas</item>
    </string-array>
    <string name="harga">Harga</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="fasilitas1">
        1. AC\n
        2. TV\n
        3. Kamar mandi dalam\n
        4. Meja Belajar\n
        5. Tempat Tidur
    </string>
    <string name="kos1">Pondok Putri</string>
    <string name="kos2">Pondok Putra</string>
    <string name="kos3">Pondok Remaja</string>
    <string name="harga1">IDR 600.000 /Bulan</string>
    <string name="harga2">IDR 350.000 /Bulan</string>
    <string name="jarak">1024 meter dari sini</string>
    <string name="volunteer_judul">Form Pengajuan Volunteer</string>
    <string name="volunteer_form_desc">
        <b>Bagi Anda</b> yang menyukai kegiatan sosial, Anda dapat mendaftar menjadi Volunteer dengan aplikasi ini.
        Aplikasi ini akan menjadi penghubung Anda dengan seluruh <b>Panti Asuhan</b> di Kota Depok, setelah Anda mengajukan diri
        untuk menjadi Volunteer Anda akan segera di hubungi oleh pihak panti asuhan yang membutuhkan tenaga Volunteer dari Anda.
    </string>
    <string name="volunteer_form_1">Jenis Volunteer</string>
    <string name="volunteer_ex_1">ex. Freelance/Cherish us/Etc</string>
    <string name="volunteer_form_2">Nama</string>
    <string name="volunteer_ex_2">ex. Abdul</string>
    <string name="volunteer_form_3">No. Telepon</string>
    <string name="volunteer_ex_3">ex. 08778723xxx</string>
    <string name="volunteer_form_4">Keahlian</string>
    <string name="volunteer_ex_4">ex. Mengajar Matematika</string>
    <string name="volunteer_form_5">Status</string>
    <string name="volunteer_ex_5">ex. Sekolah/Kuliah/Etc</string>
    <string name="volunteer_form_6">Umur</string>
    <string name="volunteer_ex_6">ex. 21th</string>
    <string name="volunteer_form_7">Alasan</string>
    <string name="volunteer_ex_7">ex. Saya sangat menyukai kegiatan yang bersifat sosial</string>
    <string name="ImgDesc">Hi-Depok Image Description</string>
</resources>