<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rectangle_white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ImgDesc"
        android:src="@drawable/char_icon" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/ava"
        android:text="@string/uname"
        android:fontFamily="@string/fontReguler" />

    <TextView
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/user"
        android:layout_marginStart="5dp"
        android:text="@string/nama"
        android:fontFamily="@string/fontReguler" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/ava"
        android:text="@string/mail"
        android:fontFamily="@string/fontReguler" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/mail"
        android:text="@string/mail2"
        android:fontFamily="@string/fontReguler" />

    <TextView
        android:id="@+id/almt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/ava"
        android:layout_below="@id/mail"
        android:text="@string/almt"/>

    <TextView
        android:id="@+id/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/almt"
        android:layout_below="@id/email"
        android:text="@string/alamat"/>

    <TextView
        android:id="@+id/nmr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/ava"
        android:layout_below="@id/alamat"
        android:text="@string/noTlp"/>

    <TextView
        android:id="@+id/tlp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/nmr"
        android:layout_below="@id/alamat"
        android:text="@string/tlp"/>

    <TextView
        android:id="@+id/tgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/ava"
        android:layout_below="@id/nmr"
        android:text="@string/TglLahir"/>

    <TextView
        android:id="@+id/tglLahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tgl"
        android:layout_below="@id/tlp"
        android:text="@string/jointgl"/>

    <TextView
        android:id="@+id/bio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/ava"
        android:layout_below="@id/tgl"
        android:text="@string/bio2"/>

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/bio2"
        android:layout_below="@id/tglLahir"
        android:text="@string/isibio"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.5"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        android:layout_below="@id/bio"/>

    <Button
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:background="@null"
        android:textColor="@color/colorGray"
        android:text="@string/close"/>

</RelativeLayout>