<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/wrap1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/ImgDesc"
        android:src="@drawable/char_icon"/>

    <TextView
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontBold"
        android:text="@string/nama"
        android:textSize="16sp"
        android:layout_toEndOf="@id/avatar"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:alpha="0.5"
        android:text="@string/time"
        android:textSize="10sp"
        android:layout_below="@id/uname"
        android:layout_toEndOf="@id/avatar"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/komen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontReguler"
        android:layout_below="@id/time"
        android:layout_marginTop="5dp"
        android:text="@string/desc"
        android:layout_marginStart="5dp"/>

</RelativeLayout>