<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="tiregdev.hi_depok.activity.VolunteerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/fontReguler"
                android:text="@string/volunteer_form_desc"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:background="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/volunteer_judul"
                android:textSize="16sp"
                android:fontFamily="@string/fontBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_1"/>

            <EditText
                android:id="@+id/jenisVolunteer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler"
                android:hint="@string/volunteer_ex_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_2"/>

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler"
                android:hint="@string/volunteer_ex_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_3"/>

            <EditText
                android:id="@+id/nmrTlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler"
                android:hint="@string/volunteer_ex_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_4"/>

            <EditText
                android:id="@+id/keahlian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler"
                android:hint="@string/volunteer_ex_4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_5"/>

            <EditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler"
                android:hint="@string/volunteer_ex_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_6"/>

            <EditText
                android:id="@+id/umur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler"
                android:hint="@string/volunteer_ex_6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/fontReguler"
                android:textColor="@color/colorRed"
                android:text="@string/volunteer_form_7"/>

            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_gray"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/volunteer_ex_7"
                android:textColor="@color/colorGray"
                android:fontFamily="@string/fontReguler" />

            <Button
                android:id="@+id/kirim"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_blue"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:fontFamily="@string/fontBold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
