<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageTitle"
        android:layout_alignParentEnd="true"
        android:src="@drawable/report_banjir" />

    <TextView
        android:id="@+id/titleNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:padding="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:fontFamily="@string/fontBold"
        android:text="@string/news1"/>

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleNews"
        android:layout_marginStart="5dp"
        android:text="@string/portal1"
        android:textSize="12sp"
        android:fontFamily="@string/fontReguler" />

    <TextView
        android:id="@+id/titik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/source"
        android:layout_below="@id/titleNews"
        android:layout_marginTop="1dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/titik" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/titik"
        android:layout_below="@id/titleNews"
        android:text="@string/time1"
        android:textSize="12sp"
        android:fontFamily="@string/fontReguler" />

</RelativeLayout>