<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picNotif"
            android:contentDescription="@string/ImgDesc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/report_macet" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/picNotif"
            android:text="@string/nama"
            app:font="@string/fontBold" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/notifTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/user"
            android:text="@string/like"
            app:font="@string/fontReguler" />

        <ImageView
            android:id="@+id/dm"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/chat"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/ImgDesc"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/picNotif"
            android:text="@string/time"
            app:font="@string/fontThin" />



    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/wrapper"
        android:background="#d6d5d4" />

</RelativeLayout>