<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ImgDesc"
        android:src="@drawable/icon_splash" />

    <fr.arnaudguyon.smartfontslib.FontTextView
        android:id="@+id/icon_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-35dp"
        android:text="@string/app_tagline"
        android:textColor="@color/colorBiruTua"
        android:textSize="30sp"
        app:font="@string/fontRegulerItalic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/icon_tagline"
        android:layout_marginTop="10dp"
        android:paddingEnd="80dp"
        android:paddingStart="80dp">

        <fr.arnaudguyon.smartfontslib.FontEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rectangle_white_login"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorBlack"
            app:font="@string/fontReguler" />

        <fr.arnaudguyon.smartfontslib.FontEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/email"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_white_login"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorBlack"
            app:font="@string/fontReguler" />

        <fr.arnaudguyon.smartfontslib.FontButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/pass"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_blue"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:font="@string/fontBold" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/lupaPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/lupaPass"
            android:textColor="#348eb1" />

        <fr.arnaudguyon.smartfontslib.FontButton
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/lupaPass"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_red"
            android:drawableStart="@drawable/google"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/loginwithgoogle"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:font="@string/fontReguler" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:alpha="0.9"
        android:gravity="center"
        android:visibility="invisible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="76dip"
            android:layout_height="76dip"
            android:visibility="invisible"
            app:indicator="BallTrianglePath"
            app:indicator_color="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>
